tablate_screen_css

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -19,6 +19,12 @@
         height: auto;
     }
 
+    @media (max-width: 1199px) and (min-width: 765px) {
+        margin-bottom: 20px;
+        height: fit-content;
+        border-radius: $borderRadious;
+    }
+
     header.about-header,
     footer.about-footer {
         position: sticky;
