--- a/src/app/components/input-button/input-button.component.scss
+++ b/src/app/components/input-button/input-button.component.scss
@@ -22,6 +22,9 @@ button,
     &:hover {
         color: $primary
     }
+    &.disabled:hover{
+        color: unset;
+    }
 }
 
 .button {
@@ -82,4 +85,16 @@ button,
         }
 
     }
+    &.disabled:hover{
+        .arrow {
+            &::after {
+                background: #171717;
+            }
+
+            &::before {
+                background: #171717;
+            }
+        }
+    }
+
 }
