--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,6 +1,7 @@
 @import '../../assets/scss/colors';
 @import '../../assets/scss/mixin';
 @import '../../assets/scss/variables';
+@import '../../assets/scss/defoultClass';
 
 
 .contact-container {
@@ -17,6 +18,12 @@
         border-radius: $borderRadious;
         // margin-bottom: 6px;
         height: auto;
+    }
+
+    @media (max-width: 1199px) and (min-width: 765px) {
+        margin-bottom: 20px;
+        height: fit-content;
+        border-radius: $borderRadious;
     }
 
     header.contact-header,
