--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -18,6 +18,12 @@
         height: auto;
     }
 
+    @media (max-width: 1199px) and (min-width: 765px) {
+        margin-bottom: 20px;
+        height: fit-content;
+        border-radius: $borderRadious;
+    }
+
     .blog-header,
     .blog-footer {
         position: sticky;
