--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -40,88 +40,8 @@
         <h5>{{service.TAG}}</h5>
         <p>{{service.serviceDeatil}}</p>
       </div>
-      <!-- <div class="col">
-        <div>
-          <i class="fas fa-music fa-lg"></i>
-        </div>
-        <h5>Photo Editing</h5>
-        <p>Basic photo Editing, photo customization Photoshop</p>
-      </div>
-      <div class="col">
-        <div>
-          <i class="fas fa-bullhorn fa-lg"></i>
-        </div>
-        <h5>UI</h5>
-        <p>Logo design, wireframeing, prototyping</p>
-      </div>
-      <div class="col">
-        <div>
-          <i class="fas fa-gamepad fa-lg"></i>
-        </div>
-        <h5>Photography</h5>
-        <p>Mature Photography, Mildlife Photography, Micro Photography</p>
-      </div> -->
     </div>
   </section>
-  <!-- <section class="pricing">
-    <header class="jointed">
-      <p>p</p><span>ricing</span>
-    </header>
-    <div class="row">
-      <div class="col col-6">
-        <div class="pricing-item">
-          <div class="icon"><i class="fas fa-tachometer-alt fa-lg"></i></div>
-          <div class="name">Basic</div>
-          <div class="amount">
-            <span class="dollar">$</span>
-            <span class="number">22</span>
-            <span class="period">hour</span>
-          </div>
-          <div class="feature-list">
-            <ul>
-              <li>Web Development</li>
-              <li>Advetising</li>
-              <li>Game Development</li>
-              <li class="strick">Music Writing</li>
-              <li class="strick">Photography <strong>new</strong></li>
-            </ul>
-          </div>
-          <div class="lnks">
-            <a href="#" class="lnk">
-              <span class="text">Buy Basic</span>
-              <i class="fas fa-tachometer-alt"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col col-6">
-        <div class="pricing-item">
-          <div class="icon"><i class="fas fa-tachometer-alt fa-lg"></i> </div>
-          <div class="name">Pro</div>
-          <div class="amount">
-            <span class="dollar">$</span>
-            <span class="number">48</span>
-            <span class="period">hour</span>
-          </div>
-          <div class="feature-list">
-            <ul>
-              <li>Web Development</li>
-              <li>Advetising</li>
-              <li>Game Development</li>
-              <li>Music Writing</li>
-              <li>Photography <strong>new</strong></li>
-            </ul>
-          </div>
-          <div class="lnks">
-            <a href="#" class="lnk">
-              <span class="text">Buy Pro</span>
-              <i class="fas fa-tachometer-alt"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
   <section class="funFact">
     <header>
       <p>fun</p><span>fact</span>
@@ -133,27 +53,9 @@
         </div>
         <p>{{item.data}}</p>
       </div>
-      <!-- <div class="col col-3 right-gradient">
-        <div class="icon">
-          <i class="fas fa-trophy fa-2x"></i>
-        </div>
-        <p>2+ website created</p>
-      </div>
-      <div class="col col-3 right-gradient">
-        <div class="icon">
-          <i class="fas fa-mug-hot fa-2x"></i>
-        </div>
-        <p>1000 Cups of coffee</p>
-      </div>
-      <div class="col col-3">
-        <div class="icon">
-          <i class="fas fa-flag fa-2x"></i>
-        </div>
-        <p>10 states Visited</p>
-      </div> -->
     </div>
   </section>
-  <section class="clients">
+  <!-- <section class="clients">
     <header class="jointed">
       <p>c</p><span>lients</span>
     </header>
@@ -161,17 +63,8 @@
       <div class="col  right-gradient" *ngFor="let client of clients">
         <img src="{{client.url}}" alt="clients">
       </div>
-      <!-- <div class="col  right-gradient">
-        <img src="assets/img/client_2.png" alt="">
-      </div>
-      <div class="col  right-gradient">
-        <img src="assets/img/client_3.png" alt="">
-      </div>
-      <div class="col ">
-        <img src="assets/img/client_4.png" alt="">
-      </div> -->
     </div>
-  </section>
+  </section> -->
   <section class="testimonials">
     <header class="jointed">
       <p>t</p><span>estimonials</span>
@@ -187,28 +80,6 @@
           <p>{{designation}}</p>
         </div>
       </div>
-      <!-- <div class="slide" id="s2">
-        <div class="text">
-          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit.</p>
-        </div>
-        <div class="user">
-          <div><img src="../../assets/img/man1.jpg" alt=""></div>
-          <h5>Helen Floyd</h5>
-          <p>Art Director</p>
-        </div>
-      </div> -->
-      <!-- <div class="slide" id="s3">
-        <div class="text">
-          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit.</p>
-        </div>
-        <div class="user">
-          <div><img src="../../assets/img/man1.jpg" alt=""></div>
-          <h5>Helen Floyd</h5>
-          <p>Art Director</p>
-        </div>
-      </div> -->
     </div>
   </section>
   <footer class="about-footer"></footer>
