--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -107,6 +107,7 @@
                     @include fullBox();
                     background-size: cover;
                     background-repeat: no-repeat;
+                    background-position: bottom;
                     position: relative;
                     transition: all ease 0.3s;
 
