--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -19,7 +19,7 @@
           <span class="btn-link-text">Download CV</span>
           <span class="btn-text-icon"><i class="fas fa-download"></i></span>
         </a></div>
-      <div><a href="javascript:void(0)">
+      <div><a href="javascript:void(0)" (click)="goToContact($event)">
           <span class="btn-link-text">contact me</span>
           <span class="btn-text-icon"><i class="fas fa-id-card"></i></span>
         </a></div>
